repurposed UI for charity

--- a/extension/popup.css
+++ b/extension/popup.css
@@ -1,12 +1,12 @@
-.doge-ad-blocker-settings {
+.charity-ad-blocker-settings {
   border: 1px solid red;
   margin: 5px;
   width: 300px;
   height: 225px;
-  background-image: url('images/doge.jpg');
+  background-color: blue;
   position: relative;
 }
-.doge-ad-blocker-settings:after {
+.charity-ad-blocker-settings:after {
   padding: 10px;
 }
 h1 {
